--- a/css/video.css
+++ b/css/video.css
@@ -391,6 +391,7 @@ section.settings {
 .settings .items .item h2 {
     color: var(--settings-font-clr);
     font-size: 1.5rem;
+    white-space: nowrap;
 }
 
 .settings .items .item>span {
@@ -450,6 +451,29 @@ section.settings {
     border: rgba(19, 115, 215, 0.4) 5px solid;
     cursor: pointer;
     margin-left: 7px;
+}
+
+.gear-popup {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+    height: 20%;
+    width: 255px;
+    position: absolute;
+    top: 570px;
+    left: 20px;
+    background-color: #054AA5;
+    border: rgba(19, 115, 215, 0.4) 5px solid;
+}
+
+.gear-popup a {
+    padding: 15px 20px;
+    width: 80%;
+    border: rgba(19, 115, 215, 0.4) 5px solid;
+    text-align: center;
+    cursor: pointer;
 }
 
 
