--- a/css/video.css
+++ b/css/video.css
@@ -325,10 +325,100 @@ main {
 }
 
 .TRIGGER {
-    background-color: red;
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 125px;
+    background-image: url(/Devices/trigger.png);
+    background-size: cover;
     cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    padding: 10px 0 0 40px;
+    letter-spacing: -0.10rem;
+    font-family: 'alarm_clock';
+    z-index: 1;
+}
+
+.TRACKER {
+    height: 120px;
+    width: 125px;
+    background-image: url(/Devices/);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+
+.MUTATOR-ZONE {
+    height: 120px;
+    width: 120px;
+    background-image: url(/Devices/mutator.png);
+    background-size: cover;
+    cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    padding: 10px 0 0 40px;
+    letter-spacing: -0.10rem;
+    font-family: 'alarm_clock';
+}
+
+.SEQUENCER {
+    height: 120px;
+    width: 120px;
+    background-image: url(/Devices/sequencer.png);
+    background-size: cover;
+    cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    position: relative;
+}
+
+.SCORE-MANAGER {
+    height: 120px;
+    width: 120px;
+    background-image: url(/Devices/score.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    padding: 10px 0 0 40px;
+    letter-spacing: -0.10rem;
+    font-family: 'alarm_clock';
+}
+
+.HUD-MESSAGE-DEVICE {
+    height: 120px;
+    width: 120px;
+    background-image: url(/Devices/);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    padding: 10px 0 0 40px;
+    letter-spacing: -0.10rem;
+    font-family: 'alarm_clock';
+}
+
+.TEAM-SETTINGS {
+    height: 125px;
+    width: 125px;
+    background-image: url(/Devices/team.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    cursor: pointer;
+    color: rgb(138, 138, 229);
+    font-size: 1.2rem;
+    padding: 10px 0 0 40px;
+    letter-spacing: -0.10rem;
+    font-family: 'alarm_clock';
+}
+
+.marked-as-done {
+    opacity: 0.2;
 }
 
 
@@ -376,25 +466,26 @@ section.settings {
 }
 
 .settings .items {
-    padding: 10px 20px 20px 20px;
     position: relative;
     flex-grow: 1;
 }
 
 .settings .items .item {
+    display: flex;
+    align-items: center;
+    margin: 10px 20px 0 20px;
     background-color: var(--settings-item-clr);
     display: flex;
-    padding: 15px 30px 15px 30px;
-    margin-bottom: 0.2rem;
+    padding: 15px 30px 15px 20px;
 }
 
 .settings .items .item h2 {
     color: var(--settings-font-clr);
-    font-size: 1.5rem;
-    white-space: nowrap;
+    font-size: 75%;
 }
 
 .settings .items .item>span {
+    font-size: 75%;
     margin-left: auto;
     color: white;
 }
@@ -462,7 +553,7 @@ section.settings {
     height: 20%;
     width: 255px;
     position: absolute;
-    bottom: 80px;
+    bottom: 100px;
     left: 20px;
     background-color: #054AA5;
     border: rgba(19, 115, 215, 0.4) 5px solid;
@@ -513,7 +604,7 @@ section.settings {
 
 /* ========== RESPONSIVE DESIGN ========== */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     .nav-items-div {
         display: none;
     }
@@ -533,10 +624,10 @@ section.settings {
         grid-row-end: 2;
     }
     .settings .items .item h2 {
-        font-size: .9rem;
+        font-size: 70%;
     }
     .settings .items .item>span {
-        font-size: .9rem;
+        font-size: 70%;
     }
     .settings-buttons .gear-btn {
         width: 75px;
@@ -561,7 +652,7 @@ section.settings {
         height: 125px;
         width: 175px;
         position: absolute;
-        bottom: 80px;
+        bottom: 80px !important;
         left: 20px;
         background-color: #054AA5;
         border: rgba(19, 115, 215, 0.4) 5px solid;
