Search Bar & Changes to Header
- Added a Search Bar to the Videos page
- At 1000px width it switches over to the sidebar
- Only Design, no function yet
- Instead of the sidebar button being to the left on mobile, It's now in the same place as it is on Desktop

--- a/css/videos.css
+++ b/css/videos.css
@@ -102,8 +102,12 @@ header {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+}
+
+.logo-conatiner {
+    display: flex;
 }
 
 header .sidebar-button {
@@ -114,13 +118,45 @@ header .sidebar-button {
 .logo {
     height: 40px;
     width: 240px;
-    flex-grow: 1;
     display: flex;
     align-items: center;
 }
 
 .logo:hover {
     cursor: pointer;
+}
+
+.search-bar {
+    display: flex;
+    position: relative;
+    width: 35%;
+}
+
+.search-bar .search-bar-input {
+    flex-grow: 1;
+    outline: none;
+    padding: 10px;
+    background-color: var(--off-main-clr);
+    border: 2px solid white;
+    border-radius: 3px;
+}
+
+.search-bar .search-bar-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.search-bar .search-bar-icon:hover {
+    cursor: pointer;
+}
+
+.search-bar .search-bar-icon ion-icon {
+    font-size: 1.5rem;
 }
 
 .nav-list {
@@ -211,11 +247,44 @@ header .sidebar-button {
 
 /* ========== SIDEBAR BODY ========== */
 
+.sidebar-search {
+    display: none;
+    padding: 20px;
+}
+
+.sidebar-search .search-bar-input {
+    flex-grow: 1;
+    outline: none;
+    padding: 10px;
+    background-color: var(--off-main-clr);
+    border: 2px solid white;
+    border-radius: 3px;
+}
+
+.sidebar-search .search-bar-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.sidebar-search .search-bar-icon:hover {
+    cursor: pointer;
+}
+
+.sidebar-search .search-bar-icon ion-icon {
+    font-size: 1.5rem;
+}
+
 .sidebar-playlists {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
+    overflow-y: scroll;
 }
 
 .sidebar-playlists>h2 {
@@ -242,6 +311,7 @@ header .sidebar-button {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    overflow-y: scroll;
 }
 
 .sidebar-unfinished-videos>h2 {
@@ -298,10 +368,6 @@ main {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(auto-fit, 1fr);
-}
-
-.ad-desktop1>div {
-    margin: 30px;
 }
 
 .ad-mobile1 {
@@ -363,6 +429,15 @@ main {
 
 /* ========== RESPONSIVE DESIGN ========== */
 
+@media screen and (max-width: 1000px) {
+    .search-bar {
+        display: none;
+    }
+    .sidebar-search {
+        display: flex;
+    }
+}
+
 @media screen and (max-width: 800px) {
     main {
         grid-template-columns: repeat(3, 1fr);
@@ -382,20 +457,8 @@ main {
     .nav-items-div {
         display: none;
     }
-    nav {
-        display: grid;
-        grid-template-rows: repeat(1, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-    }
-    header .sidebar-button {
-        grid-column-start: 2;
-        grid-column-end: 3;
-        margin-left: auto;
-        margin-right: 20px;
-    }
-    header .logo {
-        grid-row-start: 1;
-        grid-row-end: 2;
+    .search-bar {
+        display: none;
     }
     .ad-mobile1 {
         display: block;
