--- a/css/home.css
+++ b/css/home.css
@@ -65,7 +65,7 @@ li {
 /* ========== WEBSITE ========== */
 
 ::-webkit-scrollbar {
-    width: 25px;
+    width: 10px;
 }
 
  ::-webkit-scrollbar-track {
@@ -76,12 +76,15 @@ li {
     background: rgba(5, 5, 5, 0.7);
     transition: 0.2s;
     border-radius: 100vw;
-    border: 7px var(--off-main-clr) solid;
 }
 
  ::-webkit-scrollbar-thumb:hover {
     background: rgb(0, 0, 0);
     transition: 0.2s;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
 }
 
 #preloader {
@@ -116,6 +119,15 @@ li {
     box-shadow: 3px 10px 10px black;
 }
 
+@keyframes hey {
+    0% {
+        height: 100vh;
+    }
+    100% {
+        height: 0;
+    }
+}
+
 #website-intro img {
     width: 20vw;
     transition: 0.2s;
@@ -132,15 +144,6 @@ li {
     }
     100% {
         opacity: 0;
-    }
-}
-
-@keyframes hey {
-    0% {
-        height: 100vh;
-    }
-    100% {
-        height: 0;
     }
 }
 
@@ -267,6 +270,7 @@ header .sidebar-button {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     border-bottom: 3px rgba(0, 0, 0, 0.1) solid;
+    overflow-y: scroll;
 }
 
 .sidebar-playlists>h2 {
@@ -294,6 +298,7 @@ header .sidebar-button {
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    overflow-y: scroll;
 }
 
 .sidebar-unfinished-videos>h2 {
